# aquaponicssensor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Shopping_Checklist.md  config.json  data.json  index.html  pyproject.toml  requirements.txt  run_cycle.sh  sensor_logger.py  sync_pages.sh  trim_data.sh
.github/workflows/: ci.yml
docs/: Connect_Pi_and_Repo.txt  Pi_Wiring_and_Setup.txt  coach.json  data.json  index.html  summaries.json
e2e/: package.json  playwright.config.ts
e2e/tests/: frontend.spec.ts
pi/: __init__.py  build_summaries.py  coach.py  conversions.py  hal.py  logger.py  requirements.txt  sensor_logger.py  sensors.py
schema/: coach.schema.json  data.schema.json
scripts/: generate_dummy_data.py  serve_static.py
tests/: test_coach_schema.py  test_conversions.py  test_daily_averages.py  test_data_schema.py  test_hal_mocks.py  test_logger_pruning.py
tests/fixtures/: sample_30d.json  sample_week.json
